# py-tweet

./: .pre-commit-config.yaml  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: lint.yml  publish.yml  tests.yml
pytweet/: __init__.py  _tweet.py  tweet.py  utils.py
pytweet/sync/: __init__.py  tweet.py
tests/examples/: 1803774806980022720.json
tests/unit/: conftest.py  test_get_id_token.py  test_get_tweet.py  test_sync_get_tweet.py  test_validate_tweet_id.py
